src/test/ui/issues/issue-20616-7.stderr
error: expected one of `>`, const, identifier, lifetime, or type, found `,`
  --> $DIR/issue-20616-7.rs:28:22
   |
LL | type Type_7 = Box<(),,>;
   |                      ^ expected one of `>`, const, identifier, lifetime, or type here

error: aborting due to previous error

